Create new parent route for posts (/posts).
* Update all links.
* Add link to see all posts under Blog menu.
* Move Search link under Blog menu.

--- a/src/components/SimilarPosts.astro
+++ b/src/components/SimilarPosts.astro
@@ -18,7 +18,7 @@ const { posts } = Astro.props;
     posts.map((post: any, i: number) => (
       <div class={`col-12 sm:col-6 md:col-4 ${i === 2 && "hidden md:block"}`}>
         {post.data.image && (
-          <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
+          <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
             <Image
               class="group-hover:scale-[1.05] transition duration-300 w-full"
               src={post.data.image}
@@ -52,7 +52,7 @@ const { posts } = Astro.props;
           </li>
         </ul>
         <h3 class="font-bold text-lg md:text-xl">
-          <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
+          <a href={`/posts/${post.slug}`} class="block hover:text-primary transition duration-300">
             {post.data.title}
           </a>
         </h3>
