--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -24,7 +24,7 @@ const { class: className, posts, fluid } = Astro.props;
     posts.map((post: any, i: number) => (
       <div class={i === 0 && fluid !== false ? "col-12" : "col-12 sm:col-6"}>
         {post.data.image && (
-          <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
+          <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
             <Image
               class="group-hover:scale-[1.03] transition duration-300 w-full"
               src={post.data.image}
@@ -83,7 +83,7 @@ const { class: className, posts, fluid } = Astro.props;
           </li>
         </ul>
         <h3 class="text-2xl md:text-3xl font-bold mb-4">
-          <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
+          <a href={`/posts/${post.slug}`} class="block hover:text-primary transition duration-300">
             {post.data.title}
           </a>
         </h3>
