--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -54,7 +54,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
           {currentPosts.map((post: any, i: number) => (
           <div class="col-12 sm:col-6 lg:col-4">
             {post.data.image && (
-              <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
+              <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
                 <Image
                   class="group-hover:scale-[1.05] transition duration-300 w-full"
                   src={post.data.image}
@@ -88,7 +88,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
               </li>
             </ul>
             <h3 class="text-xl md:text-2xl font-bold">
-              <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
+              <a href={`/posts/${post.slug}`} class="block hover:text-primary transition duration-300">
                 {post.data.title}
               </a>
             </h3>
