--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -2,6 +2,8 @@
 import { Image } from 'astro:assets';
 import type { CollectionEntry } from 'astro:content';
 
+import Tile from '@components/Tile.astro';
+
 import config from "@config/config.json";
 import { getAllAuthors } from "@lib/contentParser";
 import dateFormat from "@lib/utils/dateFormat";
@@ -22,19 +24,14 @@ const { class: className, posts, fluid } = Astro.props;
 <div class={`row gy-5 gx-4 ${className} ${posts.length === 1 ? "justify-center" : ""} `}>
   {
     posts.map((post: any, i: number) => (
-      <div class={i === 0 && fluid !== false ? "col-12" : "col-12 sm:col-6"}>
-        {post.data.image && (
-          <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
-            <Image
-              class="group-hover:scale-[1.03] transition duration-300 w-full"
-              src={post.data.image}
-              alt={post.data.title}
-              width={i === 0 ? 925 : 445}
-              height={i === 0 ? 475 : 230}
-            />
-          </a>
-        )}
-        <ul class="mt-6 mb-4 flex flex-wrap items-center text-text">
+      <Tile
+        image={post.data.image}
+        title={post.data.title}
+        body={post.body && post.body?.slice(0, Number(i === 0 && fluid !== false ? summary_length * 2 : summary_length)) + '...'}
+        url={`/posts/${post.slug}`}
+        class={i === 0 && fluid !== false ? "col-12" : "col-12 sm:col-6"}
+      >
+        <ul slot="meta" class="mt-6 mb-4 flex flex-wrap items-center text-text">
           <li class="mr-5">
             {authors
               .filter((author) =>
@@ -62,35 +59,25 @@ const { class: className, posts, fluid } = Astro.props;
           </li>
           <li class="mr-5 flex items-center flex-wrap font-medium">
             <BiCalendarEdit className="mr-1 h-5 w-5 text-gray-600" />
-            <>{dateFormat(post.data.date)}</>
+            {dateFormat(post.data.date)}
           </li>
           <li class="mr-5 flex items-center flex-wrap">
             <BiCategoryAlt className="mr-1 h-[18px] w-[18px] text-gray-600" />
-            <>
-              <ul>
-                {post.data.categories.map((category: string, i: number) => (
-                  <li class="inline-block">
-                    <a
-                      href={`/categories/${slugify(category)}`}
-                      class="mr-2 hover:text-primary font-medium"
-                    >
-                      {humanize(category)}{i !== post.data.categories.length - 1 && ","}
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            </>
+            <ul>
+              {post.data.categories.map((category: string, i: number) => (
+                <li class="inline-block">
+                  <a
+                    href={`/categories/${slugify(category)}`}
+                    class="mr-2 hover:text-primary font-medium"
+                  >
+                    {humanize(category)}{i !== post.data.categories.length - 1 && ","}
+                  </a>
+                </li>
+              ))}
+            </ul>
           </li>
         </ul>
-        <h3 class="text-2xl md:text-3xl font-bold mb-4">
-          <a href={`/posts/${post.slug}`} class="block hover:text-primary transition duration-300">
-            {post.data.title}
-          </a>
-        </h3>
-        <p class="text-text">
-          {post.body?.slice(0, Number(i === 0 && fluid !== false ? summary_length * 2 : summary_length))}...
-        </p>
-      </div>
+      </Tile>
     ))
   }
 </div>
