--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -31,7 +31,7 @@ const { posts, fluid, class: className } = Astro.props;
         class="col-12"
         class:list={[{ 'sm:col-6': !fluid || i > 0, 'lg:col-3': !fluid || i > 0 }]}
       >
-        <ul slot="meta" class="mt-6 mb-4 flex flex-wrap items-center text-text">
+        <ul slot="meta" class="mt-2 mb-2 flex flex-wrap items-center text-text p-1">
           <li class="mr-5">
             {authors
               .filter((author) =>
