--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
-import config from "@config/config.json";
 import Base from "@layouts/Base.astro";
-import Pagination from "@components/Pagination.astro";
+import ContentHeader from "@components/ContentHeader.astro";
 import Posts from "@components/Posts.astro";
+
 import { getAllPosts } from "@lib/contentParser";
 import { sortByDate } from "@lib/utils/sortFunctions";
+
+const title = 'Value Proposition';
+const subTitle = '"I will make you super smart so you can make your kid super smart."';
 
 const allPosts = await getAllPosts();
 
@@ -15,9 +18,9 @@ const posts = featuredPosts.concat(otherPosts).slice(0, 4);
 ---
 
 <Base>
-  <section>
-    <div class="container">
-      <Posts posts={posts} fluid={false} class="mb-16" />
-    </div>
+  <ContentHeader title={title} subTitle={subTitle} />
+
+  <section class="container mb-16">
+    <Posts posts={posts} fluid={false} />
   </section>
 </Base>
