Fix vertical gap on Services page.

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -13,8 +13,7 @@ interface Props {
 const { summary_length } = config.settings;
 const { services, class: className } = Astro.props;
 ---
-
-<div class={`row gx-2 ${className || ''}`}>
+<div class={`row g-2 ${className || ''}`}>
   {
     services.map((service: any, i: number) => (
       <Tile
