--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -9,10 +9,10 @@ const categories = await getAllPostCategories();
 import { BiCategoryAlt } from "react-icons/bi/index.js";
 ---
 
-<Base title={"Categories"}>
+<Base title="Categories">
   <section>
     <div class="container text-center">
-      <ContentHeader title={"Categories"} />
+      <ContentHeader title="Categories" />
       <ul class="space-x-4">
         {
           categories.map((category) => (
