--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -9,10 +9,10 @@ import { FaHashtag } from "react-icons/fa/index.js";
 const tags = await getAllPostTags();
 ---
 
-<Base title={"Tags"}>
+<Base title="Tags">
   <section>
     <div class="container text-center">
-      <ContentHeader title={"Tags"} />
+      <ContentHeader title="Tags" />
       <ul class="space-x-4">
         {
           tags.map((tag) => (
