--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,8 +3,8 @@ import Base from "@layouts/Base.astro";
 import ContentHeader from "@components/ContentHeader.astro";
 ---
 
-<Base title={"Error 404"}>
+<Base title="Error 404">
   <div class="container">
-    <ContentHeader title={"Error 404"} subTitle={"Page Not Found"} />
+    <ContentHeader title="Error 404" subTitle="Page Not Found" />
   </div>
 </Base>
