Cleanup <h*> elements to avoid Lighthouse warnings.

--- a/src/components/Tile.astro
+++ b/src/components/Tile.astro
@@ -29,11 +29,11 @@ const { image, title, body, url, class: className } = Astro.props;
     <slot name="meta" />
 
     <slot name="title">
-      <h3 class="text-lg font-bold px-1">
+      <div class="text-lg font-bold px-1">
         <a href={url} class="block hover:text-primary transition duration-300">
           {title}
         </a>
-      </h3>
+      </div>
     </slot>
 
     <slot name="body">
