--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -1,11 +1,10 @@
 ---
 import { Image } from 'astro:assets';
-import type { CollectionEntry } from 'astro:content';
+import { getEntries, type CollectionEntry } from 'astro:content';
 
 import Tile from '@components/Tile.astro';
 
 import config from "@config/config.json";
-import { getAllAuthors } from "@lib/contentParser";
 import dateFormat from "@lib/utils/dateFormat";
 import { humanize,slugify } from "@lib/utils/textConverter";
 import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
@@ -17,9 +16,13 @@ interface Props {
   class?: string;
 }
 
-const authors = await getAllAuthors();
 const { summary_length } = config.settings;
 const { posts, fluid, hideMeta, class: className } = Astro.props;
+
+const postAuthorsMap = new Map<CollectionEntry<"posts">, CollectionEntry<"authors">[]>();
+for (const post of posts) {
+  postAuthorsMap.set(post, await getEntries(post.data.authors));
+}
 ---
 <div class={`row g-2 ${className || ''} ${posts.length === 1 ? "justify-center" : ""} `}>
   {
@@ -35,15 +38,10 @@ const { posts, fluid, hideMeta, class: className } = Astro.props;
         {!hideMeta && (
           <ul slot="meta" class="mt-2 mb-2 flex flex-wrap items-center text-text p-1">
             <li class="mr-5">
-              {authors
-                .filter((author) =>
-                  post.data.authors
-                    .map((author: string) => slugify(author))
-                    .includes(slugify(author.data.title))
-                )
+              {postAuthorsMap.get(post)!
                 .map((author) => (
                   <a
-                    href={`/authors/${slugify(author.data.title)}`}
+                    href={`/authors/${author.slug}`}
                     class="flex items-center hover:text-primary font-medium"
                   >
                     {author.data.image && (
