--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @import "base";
+}
+
 @layer components {
   @import "components";
   @import "navigation";
