--- a/src/components/ContentHeader.astro
+++ b/src/components/ContentHeader.astro
@@ -9,7 +9,7 @@ interface Props {
 const { title, subTitle } = Astro.props;
 ---
 <div class="mb-8">
-  <h1 transition:animate="slide" set:html={markdownify(title)} class="text-center text-3xl md:text-4xl font-bold" />
+  <h1 transition:animate="slide" set:html={markdownify(title)} class="text-center text-3xl md:text-4xl" />
 
   {subTitle ? (
     <h2 set:html={markdownify(subTitle)} class="text-center md:text-lg" />
