--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -44,23 +44,23 @@ const main: NavigationLink[] = menu.main;
 
     <ul
       id="nav-menu"
-      class="text-center md:text-left hidden w-full md:flex md:w-auto"
+      class="text-center md:text-left text-lg hidden w-full md:flex lg:gap-4 md:w-auto"
     >
       {
         main.map((navLink) => (
           <>
             {navLink.children ? (
               <li class="nav-dropdown group relative cursor-pointer mx-1">
-                <span class="inline-flex items-center p-1 text-lg rounded font-semibold text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
+                <span class="inline-flex items-center p-1 rounded text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
                   {navLink.name}
                   <svg class="h-5 w-5 fill-current" viewBox="0 0 20 20">
                     <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
                   </svg>
                 </span>
-                <ul class="nav-dropdown-list hidden group-hover:block md:invisible md:absolute md:block md:opacity-0 md:group-hover:visible md:group-hover:opacity-100">
+                <ul class="z-10 rounded-lg bg-white px-6 py-3 shadow transition hidden group-hover:block md:invisible md:absolute md:block md:opacity-0 md:group-hover:visible md:group-hover:opacity-100">
                   {navLink.children?.map((childNavLink) => (
                     <li class="mb-1">
-                      <a href={childNavLink.url} class="nav-dropdown-link">
+                      <a href={childNavLink.url} class="block min-w-[150px] py-1 text-dark transition hover:text-primary">
                         {childNavLink.name}
                       </a>
                     </li>
@@ -69,7 +69,7 @@ const main: NavigationLink[] = menu.main;
               </li>
             ) : (
               <li class="mx-1">
-                <a href={navLink.url} class="inline-flex p-1 text-lg rounded font-semibold text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
+                <a href={navLink.url} class="inline-flex items-center p-1 text-lg rounded text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
                   {navLink.name}
                 </a>
               </li>
