--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -15,10 +15,10 @@ interface Props {
 }
 
 const { base_url } = config.site;
-const { title, description, slug, class: className } = Astro.props;
+const { title, description, slug, class: className = '' } = Astro.props;
 ---
 
-<ul class={`${className}`}>
+<ul class={className}>
   <li class="inline-block">
     <a
       aria-label="facebook share button"
