--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -16,7 +16,7 @@ const searchList = posts.map((item) => ({
 }));
 ---
 
-<Base title={`Search`}>
+<Base title="Search">
   <section>
     <div class="container">
       <ContentHeader title="Search" />
