--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -51,7 +51,7 @@ const main: NavigationLink[] = menu.main;
           <>
             {navLink.children ? (
               <li class="nav-dropdown group relative cursor-pointer mx-1">
-                <span class="inline-flex items-center p-1 rounded text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
+                <span class:list={['inline-flex items-center p-1 rounded text-dark transition hover:text-primary md:p-2 outline-2', { 'outline': navLink.outline }]}>
                   {navLink.name}
                   <svg class="h-5 w-5 fill-current" viewBox="0 0 20 20">
                     <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
@@ -69,7 +69,7 @@ const main: NavigationLink[] = menu.main;
               </li>
             ) : (
               <li class="mx-1">
-                <a href={navLink.url} class="inline-flex items-center p-1 text-lg rounded text-dark transition hover:text-primary md:p-2 outline-2" class:list={[{ 'outline': navLink.outline }]}>
+                <a href={navLink.url} class:list={['inline-flex items-center p-1 text-lg rounded text-dark transition hover:text-primary md:p-2 outline-2', { 'outline': navLink.outline }]}>
                   {navLink.name}
                 </a>
               </li>
