--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -47,7 +47,7 @@ const currentPosts = sortByDate(posts);
     <section>
       <div class="container">
         <h2 class="mb-8 text-center font-bold text-2xl md:text-3xl">Recent Posts</h2>
-        <div class="row gy-4" class:list={[{ 'justify-center': currentPosts.length < 3 }]} >
+        <div class:list={['row gy-4', { 'justify-center': currentPosts.length < 3 }]} >
           {currentPosts.map((post: any, i: number) => (
           <div class="col-12 sm:col-6 lg:col-4">
             {post.data.image && (
