--- a/src/components/SimilarPosts.astro
+++ b/src/components/SimilarPosts.astro
@@ -15,7 +15,7 @@ const { posts } = Astro.props;
 
 <div class="row gy-4 justify-center">
   {
-    posts.map((post: any, i: number) => (
+    posts.map((post, i) => (
       <div class={`col-12 sm:col-6 md:col-4 ${i === 2 && "hidden md:block"}`}>
         {post.data.image && (
           <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
