--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -16,8 +16,8 @@ const {
   title,
 }: {
   logo: string;
-  logo_width: any;
-  logo_height: any;
+  logo_width: number;
+  logo_height: number;
   logo_text: string;
   title: string;
 } = config.site;
