--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -75,7 +75,7 @@ const what_i_do = {
     <div class="container">
       <h2 class="text-center text-xl md:text-2xl font-bold mb-8">{what_i_do.title}</h2>
       <div class="row justify-center gy-4 text-center">
-        {what_i_do.items.map((item: any) => (
+        {what_i_do.items.map(item => (
           <div class="lg:col-4 md:col-6">
             <i class="{{.icon}} fa-3x text-primary mb-4"></i>
             <h3 class="text-dark font-semibold text-xl md:text-2xl mb-3">{item.title}</h3>
