--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -14,7 +14,7 @@ const { authors } = Astro.props;
 
 <div class="row justify-center">
   {
-    authors.map((author: any) => (
+    authors.map(author => (
       <div class="col-12 mb-8 sm:col-6 md:col-4">
         {author.data.image && (
           <div class="mb-4">
