--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -48,7 +48,7 @@ const currentPosts = sortByDate(posts);
       <div class="container">
         <h2 class="mb-8 text-center font-bold text-2xl md:text-3xl">Recent Posts</h2>
         <div class:list={['row gy-4', { 'justify-center': currentPosts.length < 3 }]} >
-          {currentPosts.map((post: any, i: number) => (
+          {currentPosts.map(post => (
           <div class="col-12 sm:col-6 lg:col-4">
             {post.data.image && (
               <a href={`/posts/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
