--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -6,7 +6,7 @@ import Services from "@components/Services.astro";
 import { getAllServices } from "@lib/contentParser";
 
 const title = 'Services';
-const subTitle = '"I will make you super smart so you can make your kid super smart."';
+const subTitle = '"It\s okay to be valued."';
 
 //TODO sort?
 const services = await getAllServices();
